# CorporateMessenger

./: CMakeLists.txt  copy_qt_dlls.bat  server.cpp
client/: CMakeLists.txt  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  NetworkClient.cpp  NetworkClient.h  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  main.cpp
common/: CMakeLists.txt  Message.cpp  Message.h
server/: CMakeLists.txt  ClientSession.cpp  ClientSession.h  Database.cpp  Database.h  Server.cpp  Server.h  main.cpp
